--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -6,9 +6,11 @@ section {
  width: 100%;
  height: 100%;
 }
+
 .row {
  margin-left: 0.5rem !important;
  margin-right: 0.75rem !important;
+
 }
 .row>*{
  padding-left: 0 !important;
@@ -64,9 +66,111 @@ right: 0;
  height: 40px;
  padding: 
  6px, 10px, 6px, 10px;
+ border: none;
+}
+
+.btn1{
+ margin-right: 20px;
 }
 .button:hover{
  background-color: white;
  border: 2px solid #244065;
  color: #244065;
+}
+
+.card-salesman{
+ padding: 15px 15px 15px 15px !important;
+ justify-content: center;
+background-color: rgba(211, 238, 247, 1);
+margin: 0 !important;
+border-radius: 5px;
+}
+
+.card-user{
+ padding: 15px 15px 15px 15px !important;
+ justify-content: center;
+
+margin: 0 !important;
+border-radius: 5px;
+}
+.main {
+ background-color: white !important;
+ 
+}
+.navbar {
+ box-shadow: none !important;
+}
+
+.period-bar1 {
+ color: #244065;
+ background-color: rgba(237, 237, 237, 1);
+ border-color: #244065;
+ border-radius: 10px;
+ width: 150px;
+ height: 40px; 
+}
+.label-date{
+ font-size: 12px;
+ position: absolute;
+}
+
+.period-date{
+ position: absolute;
+ right: 400px;
+}
+.input-date{
+ position: absolute;
+ right: 50px;
+}
+
+.card{
+
+ border: none !important;
+}
+.card-1{
+ border-radius: 10px;
+ background-color: 
+ rgba(253, 231, 220, 0.6);
+ width: 350px;
+ height: 
+ 140px;
+}
+.card-2{
+ border-radius: 10px;
+ background-color: 
+ rgba(204, 238, 208, 0.6);
+ width: 350px;
+ height: 
+ 140px;
+}
+.card-3{
+ border-radius: 10px;
+ background-color: 
+ rgba(211, 238, 247, 0.6);
+ width: 350px;
+ height: 
+ 140px;
+}
+
+.stat{
+ background-color: white !important;
+ border-radius: 10px !important;
+ 
+}
+
+.card-title{
+ color: rgba(64, 64, 64, 1);
+ font-size: 12px;
+ position: absolute;
+ top: 25px;
+ left: 80px;
+}
+
+.card-count {
+ font-size: 28px;
+ font-weight: 700;
+ color: rgba(64, 64, 64, 1);
+ position: absolute;
+ left: 30px;
+ top: 70px;
 }
