--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,16 +4,11 @@
   max-width: 1920px;
   margin: 0px;
   padding: 2rem;
-
+  font-family: "Noto Sans", sans-serif;
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
+
 
 @media (hover: hover) {
   a:hover {
@@ -23,7 +18,7 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
+
     place-items: center;
     align-items: center;
     justify-content: center;
