--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -20,8 +20,8 @@ section {
 }
 .offcanvas-header-right {
  position: absolute;
-left: 50px;
-
+right: 0;
+float: right;
 }
 .offcanvas-header-left {
  position: absolute;
