--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -7,6 +7,10 @@ section {
  height: 100%;
 }
 
+a {
+ text-decoration: none;
+}
+
 .row {
  margin-left: 0.5rem !important;
  margin-right: 0.75rem !important;
