--- a/public/assets/css/maincss/app.css
+++ b/public/assets/css/maincss/app.css
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
- font-family: "Nunito", sans-serif;
+ font-family: "Noto Sans", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -235,10 +235,9 @@ h6 {
 
 .card-title {
  padding: 7px 0 15px 0;
- font-size: 18px;
+ font-size: 14px;
  font-weight: 500;
  color: #012970;
- font-family: "Poppins", sans-serif;
 }
 
 .card-title span {
@@ -258,7 +257,7 @@ h6 {
 /* Alerts */
 .alert-heading {
  font-weight: 500;
- font-family: "Poppins", sans-serif;
+ font-family: "Noto Sans", sans-serif;
  font-size: 20px;
 }
 
@@ -307,7 +306,7 @@ h6 {
 /* Breadcrumbs */
 .breadcrumb {
  font-size: 14px;
- font-family: "Nunito", sans-serif;
+ font-family: "Noto Sans", sans-serif;
  color: #899bbd;
  font-weight: 600;
 }
@@ -374,7 +373,7 @@ h6 {
  font-size: 26px;
  font-weight: 700;
  color: #012970;
- font-family: "Nunito", sans-serif;
+ font-family: "Noto Sans", sans-serif;
 }
 
 .header {
