--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -390,8 +390,8 @@ input[type="date"]{
 }
 
 canvas {
-  width: 200px !important;
-  height: 200px !important;
+  width: auto !important;
+  height: 300px !important;
   text-align: center !important;
   align-items: center !important;
 }
