--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -394,11 +394,23 @@ canvas {
   height: 250px !important;
   text-align: center !important;
   align-items: center !important;
+  margin: 0 !important;
 }
 
-.canvas{
+.canvas1{
+  width: 250px !important;
   position: relative;
-  left: 5%;
+  left: 25%;
+  right: 25%;
+  text-align: center;
+  align-items: center;
+  overflow: hidden;
+}
+.canvas2{
+  width: 500px !important;
+  position: relative;
+  left: 25%;
+  right: 25%;
   text-align: center;
   align-items: center;
   overflow: hidden;
