--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -428,6 +428,14 @@ p {
   width: 200px;
   background-color: #244065 !important;
   color: white !important;
+  border-radius: 10px;
+  border: none;
+  height: 30px;
+}
+.dropdown-toggle:hover {
+  background-color: white !important;
+  border: 1px solid #244065 !important;
+  color: #244065 !important;
 }
 
 .dropdown {
