--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -32,7 +32,8 @@ a {
   left: 0;
 }
 .offcanvas-body {
-  margin-top: 40px;
+  margin-top: 10px;
+  padding: 0px 16px 16px 16px !important;
 }
 
 .offcanvas-body-inside {
@@ -334,6 +335,13 @@ a {
   top: 25px;
   left: 80px;
   font-family: "Noto Sans", sans-serif;
+}
+
+.card-title2{
+  font-size: 10px;
+  color: rgba(64, 64, 64, 1);
+  font-family: "Noto Sans", sans-serif;
+  margin: 0px !important;
 }
 
 .card-count {
