UPDATE DASHBOARD - chart data baru

--- a/public/assets/css/maincss/app.css
+++ b/public/assets/css/maincss/app.css
@@ -417,6 +417,10 @@ h6 {
    opacity: 0;
  }
 
+ .form-select {
+  width: 100vw;
+ }
+
  .header .search-bar-show {
    top: 60px;
    visibility: visible;
