--- a/public/assets/css/maincss/app.css
+++ b/public/assets/css/maincss/app.css
@@ -303,7 +303,7 @@ h6 {
  padding: 10px 0 10px 0;
  color: #3e4f6f;
  font-size: 15px;
- border-radius: 1rem !important;
+ border-radius: 0px 0px 1rem 1rem !important;
 }
 
 /* Breadcrumbs */
