--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -597,3 +597,7 @@ p {
   padding: 6px 12px 6px 12px !important;
   width: 16vw !important;
 }
+
+.spinner-border {
+  color: #244065 !important;
+}
