--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -235,6 +235,11 @@ h6{
   box-shadow: none !important;
   
 }
+.navbar1 {
+  box-shadow: 0 0 4px 0 rgba(0,0,0,.2) !important;
+  
+}
+
 
 .period-bar1 {
   color: #244065;
