--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -184,18 +184,18 @@ h6{
 }
 
 .button5 {
-  background-color: #00AA13;
+  background-color: rgba(233, 0, 25, 1);
   color: white;
   border-radius: 10px;
   width: auto;
-  height: 35px;
+  height: 25px;
   padding: 6px, 10px, 6px, 10px;
   border: none;
 }
 .button5:hover {
   background-color: white;
-  border: 2px solid #00AA13;
-  color: #00AA13;
+  border: 2px solid rgba(233, 0, 25, 1);
+  color: rgba(233, 0, 25, 1);
   font-weight: bold; 
 }
 
