--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -490,7 +490,7 @@ canvas {
 .canvas2 {
   width: 500px !important;
   position: relative;
-  left:formadasdasd 25%;
+  left:25%;
   right: 25%;
   text-align: center;
   align-items: center;
