--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -315,7 +315,7 @@ h6{
 .card-4 {
   border-radius: 10px;
   background-color: white;
-
+  width: 46vw !important;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
 }
 .card-5 {
