--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -724,3 +724,74 @@ div.dataTables_wrapper div.dataTables_length select {
   border-color: #c9c6f5;
  }
  
+ .switch {
+  position: relative;
+  display: inline-block;
+  width: 25px;
+  height: 15px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height:10px;
+  width: 10px;
+  left: 0px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #244065;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #244065;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.select-status-acc {
+
+    color: #244065 !important;
+    background-color: rgba(237, 237, 237, 1) !important;
+    border: none !important;
+    border-radius: 10px !important;
+    padding: 2px 6px 2px 10px !important;
+    width: 7vw !important;
+    height: 25px !important;
+  
+}
