--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -167,6 +167,18 @@ h6{
   border: 2px solid #244065 !important;
 }
 
+.buttonmodal {
+  background-color: #244065 !important;
+  color: white !important;
+  border-radius: 10px !important;
+  width: 100%;
+}
+
+.buttonmodal:hover {
+  background-color: white !important;
+  color: #244065 !important;
+  border: 2px solid #244065 !important;
+}
 .button4 {
   background-color: rgba(233, 0, 25, 1);
   color: white;
