--- a/public/assets/css/maincss/app.css
+++ b/public/assets/css/maincss/app.css
@@ -29,6 +29,7 @@ h6 {
  margin-top: 60px;
  padding: 20px 30px;
  transition: all 0.3s;
+ overflow-y: scroll !important;
 }
 
 @media (max-width: 1199px) {
@@ -612,7 +613,7 @@ h6 {
  z-index: 996;
  transition: all 0.3s;
  padding: 20px;
- overflow-y: auto;
+ overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: #aab7cf transparent;
  box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
