--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,6 +62,7 @@
 body {
   height: 100%;
   width: 100%;
+  background-color: white !important;
   overflow-y: scroll !important;
 
   transition: color 0.5s, background-color 0.5s;
