--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,7 @@
   font-family: "Noto Sans", sans-serif;
   font-weight: normal;
   overflow-x: scroll !important;
+  background-color: white !important;
 
 }
 
