--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -1,5 +1,5 @@
 body {
-   font-family: "Noto Sans", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 section {
@@ -48,15 +48,14 @@ a {
   border-color: #244065 !important;
 }
 
-.checkStore{
+.checkStore {
   margin-left: 20px;
 }
-.searchCheck{
+.searchCheck {
   border: 1px solid #244065 !important;
   font-size: 12px !important;
-
 }
-.form-check label{
+.form-check label {
   font-size: 14px;
   margin-left: 10px;
 }
@@ -71,10 +70,9 @@ a {
   border-radius: 50%;
   margin-right: 10px;
   display: block;
-
 }
 
-.img-profile img{
+.img-profile img {
   margin: 0 !important;
 }
 
@@ -88,18 +86,18 @@ a {
   width: auto;
 }
 
-h6{
+h6 {
   margin-bottom: 0 !important;
 }
 
 .garis-sidebar {
   height: 2px;
 }
-.salesman-history{
+.salesman-history {
   text-align: center;
 }
 
-.salesman-history-txt p{
+.salesman-history-txt p {
   margin-bottom: 5px !important;
   font-size: 8px;
 }
@@ -108,7 +106,7 @@ h6{
   width: auto;
 }
 
-.accordion-body{
+.accordion-body {
   background-color: #f3f3f3;
   font-size: 10px;
 }
@@ -192,7 +190,7 @@ h6{
   background-color: white;
   border: 2px solid rgba(233, 0, 25, 1);
   color: rgba(233, 0, 25, 1);
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .button5 {
@@ -208,7 +206,7 @@ h6{
   background-color: white;
   border: 2px solid rgba(233, 0, 25, 1);
   color: rgba(233, 0, 25, 1);
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .button6 {
@@ -224,7 +222,7 @@ h6{
   background-color: white;
   border: 2px solid #244065;
   color: #244065;
-  font-weight: bold; 
+  font-weight: bold;
 }
 .rtlink-btn4 {
   overflow: hidden;
@@ -235,7 +233,7 @@ h6{
   padding: 5px 0;
 }
 
-.rtlink-btn4:hover{
+.rtlink-btn4:hover {
   padding: 2px 0;
 }
 .card-salesman {
@@ -261,13 +259,10 @@ h6{
 }
 .navbar {
   box-shadow: none !important;
-  
 }
 .navbar1 {
-  box-shadow: 0 0 4px 0 rgba(0,0,0,.2) !important;
-  
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2) !important;
 }
-
 
 .period-bar1 {
   color: #244065;
@@ -416,7 +411,7 @@ h6{
   font-family: "Noto Sans", sans-serif;
 }
 
-.card-title2{
+.card-title2 {
   font-size: 10px;
   color: rgba(64, 64, 64, 1);
   font-family: "Noto Sans", sans-serif;
@@ -455,18 +450,16 @@ h6{
   padding-left: 100px;
 }
 
-
 .modal-dialog.modal-xl {
   max-width: 100%;
 }
 
-.modal-title{
+.modal-title {
   font-weight: bold;
-
 }
 
-.modal-header{
-    align-items: center;
+.modal-header {
+  align-items: center;
   text-align: center;
   justify-content: center !important;
 }
@@ -485,7 +478,7 @@ h6{
 .dropdown-modal {
   width: 225px !important;
   padding: 0 !important;
-
+  background-color: white !important;
 }
 .label-modal {
   display: flex;
@@ -518,7 +511,7 @@ canvas {
 .canvas2 {
   width: 500px !important;
   position: relative;
-  left:25%;
+  left: 25%;
   right: 25%;
   text-align: center;
   align-items: center;
@@ -568,11 +561,13 @@ p {
   border-radius: 10px !important;
   width: 200px !important;
   color: black;
+  background-color: white !important;
 }
 .scrollable-menu {
   height: auto;
   max-height: 200px;
   overflow-x: scroll;
+  background-color: white !important;
 }
 
 .modal-content {
@@ -590,8 +585,7 @@ p {
   padding: 0 !important;
 }
 
-
-.top-overview{
+.top-overview {
   width: 300px;
   background-color: rgba(237, 237, 237, 1);
   height: 35px;
@@ -600,7 +594,7 @@ p {
   color: #244065;
 }
 
-.txt-top-overview p{
+.txt-top-overview p {
   margin-bottom: 0px !important;
   font-size: 12px !important;
 }
@@ -639,7 +633,6 @@ p {
   }
 }
 
-
 .form-select {
   color: #244065 !important;
   background-color: rgba(237, 237, 237, 1) !important;
@@ -654,13 +647,13 @@ p {
 }
 
 .spinner-border-login {
-  color: #fff!important;
+  color: #fff !important;
 }
 
 .btn-salesman-exports {
   position: absolute;
   right: 32px;
-  top: 40px ;
+  top: 40px;
 }
 
 .form-masterdata {
@@ -687,79 +680,79 @@ p {
 div.dataTables_wrapper div.dataTables_length select {
   width: 100%;
   margin: 0 10px;
- }
- 
- div.dataTables_wrapper div.dataTables_filter {
-     position: absolute !important;
-     width: 200px !important;
-     /* top : 100px; */
- }
- 
- /* datatable-primary */
- 
- .datatable-primary thead {
-  background: #0068D5;
+}
+
+div.dataTables_wrapper div.dataTables_filter {
+  position: absolute !important;
+  width: 200px !important;
+  /* top : 100px; */
+}
+
+/* datatable-primary */
+
+.datatable-primary thead {
+  background: #0068d5;
   color: #fff;
   border-radius: 12px;
- padding: 0.25rem !important;
- }
- /* table .datatable-primary .dataTable thead {
+  padding: 0.25rem !important;
+}
+/* table .datatable-primary .dataTable thead {
    padding: 0 !important;
  } */
- 
- .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
   border: none;
   background: transparent;
- }
- 
- .dataTables_wrapper .dataTables_paginate .paginate_button {
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
   padding: 0;
   border: none;
   margin-top: 20px;
- }
- 
- table.dataTable.no-footer {
+}
+
+table.dataTable.no-footer {
   border-bottom: 1px solid rgba(120, 130, 140, 0.13) !important;
- }
- 
- table.dataTable thead th,
- table.dataTable thead td {
+}
+
+table.dataTable thead th,
+table.dataTable thead td {
   border-bottom-color: transparent;
- }
- 
- .datatable-primary .dataTables_paginate .page-item.active .page-link,
- .datatable-primary .dataTables_paginate .page-item .page-link:hover {
-  background-color: #0068D4;
-  border-color: #0068D4;
+}
+
+.datatable-primary .dataTables_paginate .page-item.active .page-link,
+.datatable-primary .dataTables_paginate .page-item .page-link:hover {
+  background-color: #0068d4;
+  border-color: #0068d4;
   color: #fff;
- }
- 
- .datatable-primary .dataTables_paginate .page-link {
-  color: #0068D4;
-  border: 1px solid #0068D4;
- }
- 
- .datatable-primary .dataTables_paginate .paginate_button.disabled,
- .datatable-primary .dataTables_paginate .paginate_button.disabled:hover,
- .datatable-primary .dataTables_paginate .paginate_button.disabled:active {
-  color: #0068D4!important;
+}
+
+.datatable-primary .dataTables_paginate .page-link {
+  color: #0068d4;
+  border: 1px solid #0068d4;
+}
+
+.datatable-primary .dataTables_paginate .paginate_button.disabled,
+.datatable-primary .dataTables_paginate .paginate_button.disabled:hover,
+.datatable-primary .dataTables_paginate .paginate_button.disabled:active {
+  color: #0068d4 !important;
   border: none;
- }
- 
- .datatable-primary .dataTables_paginate .page-item.disabled .page-link {
+}
+
+.datatable-primary .dataTables_paginate .page-item.disabled .page-link {
   color: #9f98f7;
   background-color: #f9f9f9;
   border-color: #c9c6f5;
- }
- 
- .switch {
+}
+
+.switch {
   position: relative;
   display: inline-block;
   width: 25px;
   height: 15px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -773,20 +766,20 @@ div.dataTables_wrapper div.dataTables_length select {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height:10px;
+  height: 10px;
   width: 10px;
   left: 0px;
   bottom: 2px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -813,13 +806,15 @@ input:checked + .slider:before {
 }
 
 .check-status-acc {
+  color: #fff !important;
+  background-color: #244065 !important;
+  border: none !important;
+  border-radius: 10px !important;
+  padding: 2px 6px 2px 10px !important;
+  width: 7vw !important;
+  height: 25px !important;
+}
 
-    color: #fff !important;
-    background-color: #244065 !important;
-    border: none !important;
-    border-radius: 10px !important;
-    padding: 2px 6px 2px 10px !important;
-    width: 7vw !important;
-    height: 25px !important;
-  
+.toggle2 {
+  width: 100% !important;
 }
