--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -55,6 +55,16 @@ a {
   border: 1px solid #244065 !important;
   font-size: 12px !important;
 }
+.acc-form-search {
+  /* position: absolute; */
+  right: 0px !important;
+}
+
+.searchAcc {
+  border: 1px solid #244065 !important;
+  font-size: 12px !important;
+  width: 25% !important;
+}
 .form-check label {
   font-size: 14px;
   margin-left: 10px;
