--- a/public/assets/css/maincss/style.css
+++ b/public/assets/css/maincss/style.css
@@ -56,14 +56,13 @@ a {
   font-size: 12px !important;
 }
 .acc-form-search {
-  /* position: absolute; */
-  right: 0px !important;
+  position: relative;
 }
 
 .searchAcc {
   border: 1px solid #244065 !important;
   font-size: 12px !important;
-  width: 25% !important;
+  width: 30% !important;
 }
 .form-check label {
   font-size: 14px;
